# naive_codes

algorithm/: CMakeLists.txt  basic_sort.cc  binary_tree.typ  general.h  generate_radom.py  heap.cc  priority_queue.cc  union.cc
algorithm/practice/: inversion.cc
algorithm/search/: seq_search.cc
